  - Added FTP target.

  - added the aws_location option to set the datacenter location for
    S3 targets. from Alessandro Ranellucci <aar@cpan.org>.
    The Amazon S3 target now depends on version 0.41 of Net::Amazon::S3.

  - fixed tempfile creation in gc (orphaned files were left in the
    working directory). from Alessandro Ranellucci <aar@cpan.org>.

  - added the aws_prefix option to configure multiple backup targets
    on a single Amazon account. from Alessandro Ranellucci <aar@cpan.org>.

1.06 (october 20, 2007)

  - new on-disk layout for the Filesystem target.  fully backwards
    compatible with the old layout.  also, if max-link count (max
    files in a directory) is hit, this new version will carefully
    rearrange the minimum files necessary to the new layout to
    make room, all automatically.  the new format is xx/xx/*,
    rather than xxxx/xxxx/xxxx/xxxx/* which was stupid and overkill.
    stupid because that's 65k of files in the root, twice ext3's
    limit, and overkill because leaves were always just 1 file.
    thanks to Max Kanat-Alexander for pointing this out, and
    part of the patch to use new layout pattern.

  - quieter (no) error messages on death/control-C from gpg child
    processes who were previously confused by their parent processes
    going away and cleaning up their shared temp files.

  - actually respect the --just flag on restore

1.05 (august 2, 2007)

  - 'prune' and 'gc' commands commands for both Amazon
     and Filesystem targets.  from Alessandro Ranellucci <aar@cpan.org>.

1.04 (july 30, 2007)

  - Amazon list_backups and delete backups (and delete for filesystem
    target too), from Alessandro Ranellucci <aar@cpan.org>

  - make tests pass on OS X (Jesse Vincent)

1.03 (may 23, 2007)

  - brackup-restore's verbose flag is more verbose now, showing files
    as they're restored.

  - brackup-restore can restore from an encrypted *.brackup file now,
    firing up gpg for user to decrypt to a tempfile
